# treeify

./: .gitignore  Cargo.toml  README.md  build.rs
src/: cli.rs  filetree.rs  main.rs
