[package]
name = "treeify"
version = "0.1.1"
authors = ["Loïc Damien <loic.damien@dzamlo.ch>"]
repository = "https://github.com/dzamlo/treeify"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "treeify converts the output of a command that lists files into a tree representation similar to the output of the command tree."

[dependencies]
docopt = "0.6"
rustc-serialize = "0.3"
